--- a/client/views/commentbox.css
+++ b/client/views/commentbox.css
@@ -5,15 +5,14 @@
 .comment-box {
   top: 0;
   position: absolute;
-  background: #f6f7f8;
+  background: #e5e5e5;
   width: 100%;
   height:100%;
-  z-index:100;
 }
 
 .comment-box .comment-box-toolbar{
-  background: #34495c;
-  border-bottom: 8px solid #3a516a;
+  background: white;
+  border-bottom: 8px solid #fb9737;
   height: 140px;
   padding: 15px;
 }
@@ -35,7 +34,7 @@
 
 .comment-box .comment-box-title {
   font-family: roboto, Helvetica, sans-serif;
-  color: white;
+  color: #424242;
   font-size: 28px;
   font-weight: 100;
   cursor: pointer;
@@ -46,9 +45,9 @@
   left: 80px;
   bottom: -5px;
   font-family: roboto, Helvetica, sans-serif;
-  color: #a4abb4;
+  color: #424242;
   font-size: 11px;
-  font-weight: 100;
+  font-weight: 300;
   cursor: pointer;
 }
 
@@ -70,8 +69,8 @@
 }
 
 .comment-box-section {
-  background: #f6f7f8;
-  padding-bottom: 60px;
+  background: #e5e5e5;
+  padding-bottom: 57px;
   height: 100%;
   -webkit-justify-content: space-around;
   -ms-flex-pack: distribute;
@@ -84,28 +83,21 @@
 }
 
 .comment-box .comment-box-bottom {
-  position: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
+  display: flex;
   flex-direction: row;
-  background: #f6f7f8;
+  justify-content: space-around;
+  align-items: center;
+
+  background: linear-gradient(rgba(255,255,255,0), #eee 20%) top center no-repeat;
+
   position: absolute;
   bottom: 0px;
   width: 100%;
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.45);
+  padding: 0 16px 16px 16px;
 }
 
 .comment-box .comment-box-input{
   width: 100%;
-  padding: 15px;
-}
-
-.comment-box .comment-box-send{
-  position: absolute;
-  right: 20px;
-  top: -25px;
 }
 
 /** Radio Buttons **/
@@ -142,8 +134,8 @@ paper-radio-button.green  #ink { color: #29b872; }
 paper-radio-button.yellow #ink { color: #f9bd3e; }
 paper-radio-button.red    #ink { color: #e35a6d; }
 
-paper-radio-button[checked]::shadow #radioLabel { color: #ffffff; }
-paper-radio-button[checked] #radioLabel { color: #ffffff; }
+paper-radio-button[checked]::shadow #radioLabel { color: #424242; }
+paper-radio-button[checked] #radioLabel { color: #424242; }
 
 paper-radio-button::shadow #radioLabel {
   font-family: roboto, Helvetica, sans-serif;
