--- a/client/views/opinionstats.css
+++ b/client/views/opinionstats.css
@@ -1,11 +1,124 @@
 .opinionstats-full {
   top: 0;
   position: absolute;
-  background: #f6f7f8;
+  background: #f6f6f6;
   width: 100%;
   height:100%;
   z-index:100;
 }
 .close-stats-box {
   background: #e75869;
+}
+
+.stats-topmenu {
+  background: white;
+  border-bottom: 8px solid #fb9737;
+  height: 140px;
+  padding: 15px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.stats-title-filter {
+  align-self: flex-end;
+  padding-left: 15px;
+}
+
+.stats-title {
+  font-family: roboto, Helvetica, sans-serif;
+  color: #424242;
+  font-size: 28px;
+  font-weight: 100;
+  cursor: pointer;
+}
+
+.stats-results-title {
+  font-family: roboto, Helvetica, sans-serif;
+  color: white;
+  opacity: .75;
+  font-size: 28px;
+  font-weight: 100;
+  cursor: pointer;
+}
+
+.stats-topmenu .stats-filtering {
+  font-family: roboto, Helvetica, sans-serif;
+  color: #424242;
+  font-size: 14px;
+  font-weight: 300;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: absolute;
+  color: black;
+}
+
+paper-item {
+  font-size: 14px;
+  color: black;
+}
+
+.dropdown .menu {
+  padding: 0px;
+  margin: 0px;
+}
+
+paper-dropdown-menu {
+  box-sizing: border-box;
+  position: absolute;
+}
+
+paper-dropdown-menu::shadow .selectedItem,  paper-dropdown-menu::shadow #label {
+  color: #a7afb7;
+}
+
+paper-dropdown-menu::shadow #arrow {
+  color: #424242;
+}
+
+paper-dropdown-menu {
+  border-bottom: 1px solid #424242;
+}
+
+paper-item {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+html /deep/ core-collapse {
+  border: 1px solid #ccc;
+  padding: 8px;
+}
+
+html /deep/ core-overlay {
+  border: 1px solid #ccc;
+  padding: 8px;
+  background: #fff;
+}
+
+.dropdown::shadow #ripple,
+.dropdown::shadow #background {
+  border: 1px solid #eaeaea;
+  background-color: white;
+}
+
+.stats-positives {
+  padding: 15px;
+  color: rgba(246, 246, 246, 0.85);
+  background-color: #41ca77;
+}
+
+
+.stats-neutrals {
+  padding: 15px;
+  color: rgba(246, 246, 246, 0.85);
+  background-color: #dcaa45;
+}
+
+.stats-negatives {
+  padding: 15px;
+  color: rgba(246, 246, 246, 0.85);
+  background-color: #ce4a5c;
 }
